# PMSwEng

./: README.md  annotated.html  annotated_dup.js  classes.html  dir_5d0cc46a50a36cd0410d587f293863fa.html  dir_765768ad3c4dd5ba1084fa07d2ea88de.html  dir_765768ad3c4dd5ba1084fa07d2ea88de.js  doxygen.css  files.html  files_dup.js  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  menudata.js  navtreedata.js  navtreeindex0.js
.github/workflows/: cmake-single-platform.yml  cmake-windows-build.yml  doxygen-autogen.yml
Doxygen/: Doxyfile
PacMan/: CMakeLists.txt  MyWidget.cpp  MyWidget.h  ResourceSystem.qrc  Test.cpp  Test.h  ghost.cpp  ghost.h  gtest_dependency.pri  icon.aps  icon.rc  locallib_global.h  main.cpp  maze.cpp  maze.h  maze.h.orig  mywidget.cpp  mywidget.h  pacman.cpp  pacman.h  pacmanlib_global.h  player.cpp  player.h  test.cpp  test.h
PacMan/Sprite/: PictureForPacMan.kra  Pinky.xcf  maze.xcf  maze.xpm
PacMan/Sprite/Blinky/: Blinky.xcf
PacMan/Sprite/Clyde/: Clyde.xcf
PacMan/Sprite/Ghost/: Augen.xcf  GhostFrightend.xcf
PacMan/Sprite/Inky/: Inky.xcf
PacMan/Sprite/Logo/: PacManLogo_256p.xcf
PacMan/Sprite/Maze/: maze.png~  maze.xcf
PacMan/Sprite/Pinky/: Pinky.xcf
PacMan/Sprite/Player/: Player.xcf
PacMan/Sprits/: NeededImages.txt
PacMan/Tests/: CMakeLists.txt  tst_Ghost.cpp  tst_Test.cpp
PacMan/tests/: CMakeLists.txt  tst_test.cpp
PacManTest/: CMakeLists.txt  tst_pacmantest.cpp
Planung/: Git-how-to.txt  Maze-und-Dots-Arrays-generieren.ipynb  Pflichtenheft.docx  Pflichtenheft.url
Planung/Klassendiagramm/: Klassendiagramm.html
Planung/Kontextdiagramm/: Kontextdiagramm.drawio  Kontextdiagramm.drawio.html  Unbenanntes Diagramm.drawio
Planung/Projektplan/: Jira.drawio  Needed to push Folder.txt  Overview_Jira.drawio  Projektstrukturplan.drawio
Snake/: CMakeLists.txt  Snake.qmlproject  main.cpp  mywidget.cpp  mywidget.h  qmlmodules  snake.cpp  snake.h
Snake/content/: App.qml  Screen01.ui.qml
Snake/imports/: CMakeLists.txt
Snake/src/: import_qml_plugins.h
TestApplication/: CMakeLists.txt  TestApplication.pro  gtest_dependency.pri  tst_ToTest.cpp
d0/d06/: classGhost.html  classGhost.js  classGhost_a3414af266c4bdcb026dc25c33797f3a7_icgraph.map  classGhost_a3414af266c4bdcb026dc25c33797f3a7_icgraph.md5  classGhost_a4add3cbc51388566117201ad2fba0fee_cgraph.map  classGhost_a4add3cbc51388566117201ad2fba0fee_cgraph.md5  classGhost_a4add3cbc51388566117201ad2fba0fee_icgraph.map  classGhost_a4add3cbc51388566117201ad2fba0fee_icgraph.md5  classGhost_a4c87807626e6a25df960a5f3ffa69196_cgraph.map  classGhost_a4c87807626e6a25df960a5f3ffa69196_cgraph.md5  classGhost_a572aa783158f8cd97e3ddb6ac0721192_cgraph.map  classGhost_a572aa783158f8cd97e3ddb6ac0721192_cgraph.md5  classGhost_a572aa783158f8cd97e3ddb6ac0721192_icgraph.map  classGhost_a572aa783158f8cd97e3ddb6ac0721192_icgraph.md5  classGhost_abb9c9b3a950606ae5b4f52b2f387d5f4_icgraph.map  classGhost_abb9c9b3a950606ae5b4f52b2f387d5f4_icgraph.md5  classGhost_acd1bd47ee90195f67baeb64946a4f10f_icgraph.map  classGhost_acd1bd47ee90195f67baeb64946a4f10f_icgraph.md5  classGhost_af1ba5f21140bd8d7009fbf5e9106b0d8_icgraph.map  classGhost_af1ba5f21140bd8d7009fbf5e9106b0d8_icgraph.md5
d0/d57/: classTestTest-members.html
d0/d68/: classPacMan__inherit__graph.map  classPacMan__inherit__graph.md5
d0/d9c/: classPacMan-members.html
d0/df2/: classTest-members.html
d1/d62/: classInky__inherit__graph.map  classInky__inherit__graph.md5
d1/d6d/: classInky__coll__graph.map  classInky__coll__graph.md5
d1/d73/: classGhostTest__coll__graph.map  classGhostTest__coll__graph.md5
d2/d2d/: classMaze__coll__graph.map  classMaze__coll__graph.md5
d2/d4b/: classPlayer.html  classPlayer.js  classPlayer_a0557c4b62b8801137e12d2f5be5defc8_icgraph.map  classPlayer_a0557c4b62b8801137e12d2f5be5defc8_icgraph.md5  classPlayer_a069fc8e10cca6508b15de7b6ac8a6923_icgraph.map  classPlayer_a069fc8e10cca6508b15de7b6ac8a6923_icgraph.md5  classPlayer_a25b3344ceb96d7c4cec38db6d026ff93_cgraph.map  (+13 more)
d3/d62/: player_8h_source.html
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+20 more)
(+105 files in other folders)
